# ansys-sphinx-theme

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  backstop.json  index.html  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements_chatbot.txt  requirements_docs.txt  requirements_style.txt  robots.txt  search.json  setup.py  sitemap.xml  tox.ini  versions.json  webpack.config.js
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/workflows/: backstop.yml  ci-build.yml  ci_cd.yml  label.yml  style.yml
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 1002.dependencies.md  1003.maintenance.md  1004.added.md  1004.documentation.md  1007.dependencies.md  1008.dependencies.md  1009.maintenance.md  1011.dependencies.md  1012.test.md  1014.dependencies.md  1015.dependencies.md  1016.fixed.md  1018.fixed.md  1019.maintenance.md  1020.maintenance.md  1021.added.md  1023.added.md  1024.dependencies.md  1025.dependencies.md  1027.fixed.md  1028.dependencies.md  1030.dependencies.md  1031.dependencies.md  1033.dependencies.md  1034.dependencies.md  1035.maintenance.md  1036.dependencies.md  1037.dependencies.md  1039.dependencies.md  336.dependencies.md  362.added.md  370.added.md  371.added.md  372.added.md  374.dependencies.md  375.dependencies.md  376.dependencies.md  377.dependencies.md  378.fixed.md  379.changed.md  (+432 more)
doc/source/: 404_page.rst  announcement.html  changelog.rst  cheat_sheet.qmd  class_documentation.rst  coding_style.rst  conf.py  contribute.rst  cover.sty  css.rst  custom_extension.py  examples.rst  getting-started.rst  helpers.py  index.rst  installation.rst  links.rst  navbar.yml  options.rst  python.py  release-note.rst  style.rst  usage.rst  user-guide.rst  whatsnew.yml
doc/styles/: .gitignore
docs/source/: conf.py  examples.rst  index.rst  usage.rst
pull/798/: changelog.html  contribute.html  genindex.html  py-modindex.html  searchindex.js
pull/804/: getting-started.html  objects.inv  searchindex.js  user-guide.html
pull/811/: changelog.html  searchindex.js
pull/813/: 404.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  py-modindex.html  search.html  searchindex.js  user-guide.html
pull/814/: objects.inv  searchindex.js
pull/815/: changelog.html  index.html  objects.inv  searchindex.js
pull/816/: contribute.html  searchindex.js
pull/817/: changelog.html  getting-started.html  objects.inv  py-modindex.html  searchindex.js
pull/818/: 404.html  changelog.html  genindex.html  searchindex.js
pull/819/: examples.html  searchindex.js
pull/820/: searchindex.js
pull/821/: 404.html  objects.inv  search.html  searchindex.js  user-guide.html
pull/822/: searchindex.js
pull/823/: 404.html  getting-started.html  searchindex.js
pull/827/: examples.html  genindex.html  index.html  search.html  searchindex.js  user-guide.html
pull/828/: objects.inv  searchindex.js
pull/840/: 404.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  py-modindex.html  search.html  searchindex.js  user-guide.html
pull/844/: changelog.html  py-modindex.html  searchindex.js
pull/847/: 404.html  genindex.html  searchindex.js
pull/849/: changelog.html  index.html  search.html  searchindex.js
pull/878/: changelog.html  searchindex.js
pull/888/: objects.inv  searchindex.js
pull/889/: searchindex.js
pull/898/: 404.html  changelog.html  objects.inv  py-modindex.html  searchindex.js
pull/908/: searchindex.js
pull/915/: index.html  objects.inv  searchindex.js
pull/922/: 404.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
pull/928/: 404.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
pull/941/: 404.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  py-modindex.html  search.html  searchindex.js  user-guide.html
pull/943/: 404.html  changelog.html  contribute.html  examples.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
pull/947/: genindex.html  search.html  searchindex.js
pull/948/: changelog.html  searchindex.js
pyansys_sphinx_theme/: __init__.py  _version.py  breadcrumbs.html  docs-navbar.html  layout.html  sample_func.py  samples.py  theme.conf
release/: announcement.html  index.html  versions.json
release/0.7/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
release/0.8/: .buildinfo  404.html  announcement.html  genindex.html  index.html  objects.inv  release.html  search.html  searchindex.js
release/0.9/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
requirements/: requirement_script.txt  requirements_doc.txt
src/ansys_sphinx_theme/: __init__.py  _cli.py  announcement.html  announcement_layout.html  announcements.html  cheatsheet.py  layout.html  minigallery.py  navbar_dropdown.py  sample_func.py  samples.py  theme.conf  type_hint_example.py  whatsnew.py
src/pyansys_sphinx_theme/: __init__.py  docs-navbar.html  icon-links.html  samples.py  theme.conf
tests/: ansys_sphinx_theme_full.spec.js  backstop.json  test_components.spec.js  test_contribute_developer.spec.js  test_examples.spec.js  test_examples_admonitions.spec.js  test_getting_started_installation.spec.js  test_index.spec.js  test_search.spec.js  test_sidebar.spec.js  test_sidebar_toc.spec.js  test_theme_switcher.spec.js  test_user_guide_configuration.spec.js
version/: index.html
version/0.10/: .buildinfo  404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
workflows/: ci-build.yml
(+1548 files in other folders)
