[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-sphinx-theme"
version = "1.2.2"
description = "A theme devised by ANSYS, Inc. for Sphinx documentation."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Sphinx>=4.2.0",
    "pydata-sphinx-theme>=0.15.4,<0.17",
    "Jinja2>=3.1.2",
    "importlib-metadata>=4.0",
    "pdf2image>=1.17.0",
]

[project.optional-dependencies]
autoapi = [
    "sphinx-autoapi==3.3.3",
    "sphinx-design==0.6.1",
    "sphinx-jinja==2.0.2",
]
doc = [
    "jupytext==1.16.4",
    "notebook==7.2.2",
    "nbsphinx==0.9.5",
    "numpydoc==1.8.0",
    "pandas==2.2.3",
    "Pillow>=9.0",
    "PyGitHub==2.4.0",
    "pyvista[jupyter]==0.44.1",
    "requests==2.32.3",
    "Sphinx==8.1.3",
    "sphinx-autoapi==3.3.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinx-gallery==0.18.0",
    "sphinx-jinja==2.0.2",
    "sphinx-notfound-page==1.0.4",
]

[project.entry-points."sphinx.html_themes"]
ansys_sphinx_theme = "ansys_sphinx_theme"

[tool.flit.module]
name = "ansys_sphinx_theme"

[tool.flit.sdist]
include = [
    "src/ansys_sphinx_theme/theme/ansys_sphinx_theme/layout.html",
    "src/ansys_sphinx_theme/theme/ansys_sphinx_theme/components/breadcrumbs.html",
    "src/ansys_sphinx_theme/theme/ansys_sphinx_theme/theme.conf",
    "src/ansys_sphinx_theme/theme/ansys_sphinx_theme/_templates/",
    "src/ansys_sphinx_theme/theme/ansys_sphinx_theme/static/",
]

[project.urls]
Home = "https://sphinxdocs.ansys.com/"
Source = "https://github.com/ansys/ansys-sphinx-theme"
Tracker = "https://github.com/ansys/ansys-sphinx-theme/issues"
Documentation = "https://sphinxdocs.ansys.com/"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"doc/source/examples/sphinx-gallery/sphinx-gallery.py" = ["D205", "E402", "D400"]
"src/ansys_sphinx_theme/extension/linkcode.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/ansys-sphinx-theme/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/ansys-sphinx-theme/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
